# brood

./: .gitignore  .goreleaser.yml  Dockerfile  LICENSE  README.md  build-mac.sh  build-win.sh  build.sh  clipboard.go  docker-compose.yml  go.mod  go.sum  lib.go  main.go  main.no  routes.go  server.go  structs.go
.github/workflows/: release.yml
frontend/: .gitignore  app.go  frontend-packr.go
frontend/app/: .gitignore  Cargo.toml  README.md  bootstrap.js  package.json  webpack.config.js
frontend/app/src/: app.rs  fetcher.rs  lib.rs  nft.rs  views.rs
frontend/app/src/components/: create.rs  gear.rs  grid.rs  line.rs  loading.rs  logo.rs  mod.rs  page.rs
frontend/app/src/components/icons/: edit.rs  faucet.rs  gear.rs  iota.rs  left.rs  loading.rs  logo.rs  mod.rs  plus.rs  send.rs  wallet.rs
frontend/app/src/utils/: host.rs  macros.rs  mod.rs  valid.rs  web.rs
frontend/app/static/: index.html  style.scss
frontend/img/: Info.plist  logo.icns
frontend/packrd/: packed-packr.go
wallet/: clipboard.go  lib.go  routes.go  server.go  structs.go
