[package]
name = "brood"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.32"
log = "0.4"
strum = "0.17"
strum_macros = "0.17"
serde = "1"
serde_derive = "1"
serde_json = "1"
wasm-bindgen = "0.2.58"
wasm-logger = "0.2"
wasm-bindgen-futures = "0.4.17"
futures = "0.3"
wee_alloc = { version = "0.4.4", optional = true }
yew = "0.17"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'KeyboardEvent', 'Navigator'
]
